--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "npm": "ˆ5.x"
     },
     "dependencies": {
+        "body-parser": "^1.17.2",
         "dotenv": "^4.0.0",
         "express": "^4.15.3",
         "mongoose": "^4.11.1"
