Added authentication layer with token

--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
         "npm": "ˆ5.x"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.17.2",
         "dotenv": "^4.0.0",
         "express": "^4.15.3",
-        "mongoose": "^4.11.1"
+        "jsonwebtoken": "^7.4.2",
+        "mongoose": "^4.11.1",
+        "passport": "^0.4.0",
+        "passport-jwt": "^2.2.1"
     }
 }
