--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "mongoose": "^4.11.1",
         "passport": "^0.4.0",
         "passport-jwt": "^2.2.1"
+    },
+    "devDependencies": {
+        "@angular/cli": "^1.5.3"
     }
 }
